--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -54,10 +54,11 @@
   background-color: #0a0a0c;
   position: fixed;
   z-index: 1;
-
+align-items: center;
 }
 
 .logo {
+ 
   display: flex;
   align-items: center;
 }
